<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".presentation.auth.profile.ActivityProfile">


    <!-- Subtítulo -->
    <TextView
        android:id="@+id/tv_profile_subtitle"
        style="@style/subtitle_16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/profile_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/tv_profile_title"
        style="@style/title_30sp"
        android:layout_marginTop="6dp"
        android:text="@string/profile_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_subtitle" />

    <!-- Contenedor del apodo -->
    <LinearLayout
        android:id="@+id/ll_profile_container_nick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_title">

        <TextView
            android:id="@+id/tv_profile_title_nick"
            style="@style/title_h3_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_title_nick" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_input_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/color_main"
            app:boxStrokeWidth="1dp"
            app:hintEnabled="false"> <!-- Desactiva el hint flotante -->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_prifile_input_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_font"
                android:hint="@string/profile_input_nick"
                android:inputType="textEmailAddress"
                android:padding="22dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_secondary_grey" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Contenedor de la edad -->
    <LinearLayout
        android:id="@+id/ll_profile_container_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_profile_container_nick">

        <TextView
            android:id="@+id/tv_profile_title_age"
            style="@style/title_h3_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_title_age" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/color_main"
            app:boxStrokeWidth="1dp"
            app:hintEnabled="false"> <!-- Desactiva el hint flotante -->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_font"
                android:hint="@string/profile_input_age"
                android:inputType="textEmailAddress"
                android:padding="22dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_secondary_grey" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Contenedor de la ciudad -->
    <LinearLayout
        android:id="@+id/ll_profile_container_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_profile_container_age">

        <TextView
            android:id="@+id/tv_profile_title_city"
            style="@style/title_h3_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_title_city" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_input_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/color_main"
            app:boxStrokeWidth="1dp"
            app:hintEnabled="false"> <!-- Desactiva el hint flotante -->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_font"
                android:hint="@string/profile_input_city"
                android:inputType="textEmailAddress"
                android:padding="22dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_secondary_grey" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Contenedor de la ciudad -->
    <LinearLayout
        android:id="@+id/ll_profile_container_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_profile_container_city">

        <TextView
            android:id="@+id/tv_profile_title_country"
            style="@style/title_h3_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_title_country" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_input_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/color_main"
            app:boxStrokeWidth="1dp"
            app:hintEnabled="false"> <!-- Desactiva el hint flotante -->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_input_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_font"
                android:hint="@string/profile_input_country"
                android:inputType="textEmailAddress"
                android:padding="22dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_secondary_grey" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Opciones  -->
    <LinearLayout
        android:id="@+id/ll_profile_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_profile_container_country">

        <TextView
            android:id="@+id/tv_profile_title_options"
            style="@style/title_h3_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_option_title" />


        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:padding="0dp"
            android:rowCount="2"
            android:useDefaultMargins="true">

            <!-- Botón a -->
            <Button
                android:id="@+id/b_option_a"
                style="@style/button_solid_16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="24dp"
                android:text="@string/profile_option_a"
                app:cornerRadius="16dp" />

            <!-- Botón b -->
            <Button
                android:id="@+id/b_option_b"
                style="@style/button_solid_16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:padding="24dp"
                android:layout_columnWeight="1"
                android:text="@string/profile_option_b"
                app:cornerRadius="16dp" />

            <!-- Botón c -->
            <Button
                android:id="@+id/b_option_c"
                style="@style/button_solid_16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="24dp"
                android:text="@string/profile_option_c"
                app:cornerRadius="16dp" />

            <!-- Botón d -->
            <Button
                android:id="@+id/b_option_d"
                style="@style/button_solid_16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:padding="24dp"
                android:layout_columnWeight="1"
                android:text="@string/profile_option_d"
                app:cornerRadius="16dp" />

        </GridLayout>


    </LinearLayout>


    <!-- Botón de inicio de sesión -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_login_button"
        style="@style/button_solid_16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/color_main"
        android:padding="18dp"
        android:text="@string/profile_button"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_profile_options" />


</androidx.constraintlayout.widget.ConstraintLayout>