<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".presentation.auth.login.ActivityLogin">


    <!-- Subtítulo -->
    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:layout_marginTop="60dp"
        style="@style/subtitle_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/tv_login_title"
        android:text="@string/login_title"
        android:layout_marginTop="6dp"
        style="@style/title_30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_subtitle" />

    <!-- Contenedor de email -->
    <LinearLayout
        android:id="@+id/ll_login_container_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title">

        <TextView
            android:id="@+id/tv_login_title_email"
            style="@style/title_h3_14dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_title_mail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            app:errorEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/color_main"
            app:hintEnabled="false"> <!-- Desactiva el hint flotante -->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="22dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_secondary_grey"
                android:fontFamily="@font/inter_font"
                android:hint="@string/reusable_email"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Contenedor de contraseña -->
    <LinearLayout
        android:id="@+id/ll_login_container_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_login_container_email">

        <TextView
            android:id="@+id/tv_login_title_password"
            style="@style/title_h3_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_signup_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            app:errorEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/color_main"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_font"
                android:inputType="textPassword"
                android:padding="22dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_secondary_grey"
                android:hint="@string/asterisks_password"/> <!-- Mueve el hint dentro del campo -->
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_login_forgot_password"
            style="@style/text_link_underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/login_forgot_password" />
    </LinearLayout>

    <!-- Botón de inicio de sesión -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:backgroundTint="@color/color_main"
        app:cornerRadius="16dp"
        android:padding="18dp"
        style="@style/button_solid_16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_login_container_password" />

    <!-- Bloque de otras formas de inicio de sesión -->
    <LinearLayout
        android:id="@+id/ll_login_container_mail_access"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login_button">

        <TextView
            android:id="@+id/tv_title_mail_access"
            style="@style/h3_16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_outlook" />

        <LinearLayout
            android:id="@+id/ll_login_container_google_outlook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Botón Google -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_google"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="65dp"
                android:layout_height="69dp"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/content_desc_google"
                android:gravity="center"
                android:padding="8dp"
                android:text=""
                app:cornerRadius="16dp"
                app:icon="@drawable/icon_google"
                app:iconGravity="start"
                app:iconSize="48dp"
                app:iconTint="@null"
                app:strokeColor="@color/color_secondary_grey"
                app:strokeWidth="1dp" />

            <!-- Botón Outlook -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_outlook"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="65dp"
                android:layout_height="69dp"
                android:layout_marginStart="6dp"
                android:contentDescription="@string/content_desc_outlook"
                android:gravity="center"
                android:padding="8dp"
                android:text=""
                app:cornerRadius="12dp"
                app:icon="@drawable/icon_outlook"
                app:iconGravity="start"
                app:iconSize="48dp"
                app:iconTint="@null"
                app:strokeColor="@color/color_secondary_grey"
                app:strokeWidth="1dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Enlace para registrarse -->
    <TextView
        android:id="@+id/tv_no_login_register"
        style="@style/text_link_underlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nologin_register"
        android:layout_marginBottom="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


