<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Título -->
    <TextView
        android:id="@+id/tv_forgotten_password_title"
        style="@style/title_30sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/verify_account_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subtítulo -->
    <TextView
        android:id="@+id/tv_forgotten_password_subtitle"
        style="@style/subtitle_16sp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgotten_password_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotten_password_title" />

    <!-- Contenedor de email -->
    <LinearLayout
        android:id="@+id/ll_forgotten_password_container_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgotten_password_subtitle">

        <!-- TextView título del input -->
        <TextView
            android:id="@+id/tv_forgotten_password_email"
            style="@style/title_h3_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title_mail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            app:errorEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/color_main"
            app:hintEnabled="false"> <!-- Desactiva el hint flotante -->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="22dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_secondary_grey"
                android:fontFamily="@font/inter_font"
                android:hint="@string/reusable_email"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- TODO: Agregar reCAPTCHA aquí -->

    <!-- Botón de recuperación de contraseña -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_forgotten_password_signup"
        style="@style/button_solid_16dp"
        android:layout_marginTop="6dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/color_main"
        android:padding="18dp"
        android:text="@string/forgotten_password_bt"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_forgotten_password_container_email" />

</androidx.constraintlayout.widget.ConstraintLayout>